<resources>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Efetuar Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">A senha precisa ser no mínimo de 6 caracteres</string>
    <string name="error_invalid_password">A senha é muito curta</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Campo Obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="register_button">Ainda não possui conta? Registre-se aqui</string>
    <string name="error_not_connected">Sem conexão com a internet</string>
    <string name="message_login_successful">Login efetuado com sucesso!</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="rg">RG</string>
    <string name="cpf">Cpf</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="not_same_password">As senhas não conferem!</string>
    <string name="cadastro_usuario_sucesso">Usuário cadastrado com sucesso</string>
    <string name="cadastro_pet_sucesso">Pet cadastrado com sucesso</string>
    <string name="atualiza_pet_sucesso">Pet atualizado com sucesso</string>
    <string name="atualiza_usuario_sucesso">Usuário Atualizado com sucesso</string>
    <string name="cadastro_usuario_erro">Erro ao cadastrar o Usuário!</string>
    <string name="title_cadastro_user_activity">Cadastro de Usuário</string>
    <string name="app_name">Pet Box</string>
    <string name="title_activity_menu">Perfil</string>
    <string name="invalid_password_on_save">Senha inválida</string>
    <string name="invalid_email_on_save">Email inválido</string>
    <string name="duplicated_email">Email já cadastrado</string>
    <string name="generic_error">erro generico</string>
    <string name="title_activity_perfil">Home</string>
    <string name="email_redefinicao_enviado">E-mail enviado com sucesso</string>
    <string name="email_redefinicao_enviado_erro">Erro ao enviar o e-mail</string>
    <string name="foto_deletada">Foto deletada com sucesso</string>
    <string name="facebook_app_id">358718491307847</string>
    <string name="fb_login_protocol_scheme">fb358718491307847</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Sair</string>
    <string name="action_about">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeatPassword">Repita a Senha</string>
    <string name="MINHA_PERMISSAO_CALL">1</string>
</resources>
