<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.fatec.br.adocaopet.Activity.AlterarUsuarioActivity">

    <ImageView
        android:id="@+id/imageCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:onClick="takeAPicture"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageCamera"
        android:hint="@string/nome_completo"
        android:ems="10"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNome"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editConfirmPassword"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/telefone" />

    <EditText
        android:id="@+id/editEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTelefone"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/endereco" />

    <EditText
        android:id="@+id/editRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEndereco"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/rg" />

    <EditText
        android:id="@+id/editCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editRg"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/cpf" />


    <EditText
        android:id="@+id/editDataNasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCpf"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/data_de_nascimento" />


    <Button
        android:id="@+id/btnAlterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDataNasc"
        android:layout_centerHorizontal="true"
        android:text="ATUALIZAR DADOS" />

</RelativeLayout>