<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fatec.br.adocaopet.Activity.CadastroUsuarioActivity">


    <ImageView
        android:id="@+id/imageCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:onClick="takeAPicture"
        app:srcCompat="@mipmap/ic_add_camera" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageCamera"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:hint="@string/nome_completo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNome"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_https_black_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:drawableLeft="@drawable/ic_https_black_24dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editConfirmPassword"
        android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="number" />

    <EditText
        android:id="@+id/editEndereco"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTelefone"
        android:drawableLeft="@drawable/ic_place_black_24dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/endereco"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editRg"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEndereco"
        android:drawableLeft="@drawable/ic_fingerprint_black_24dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/rg"
        android:inputType="number" />

    <EditText
        android:id="@+id/editCpf"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editRg"
        android:drawableLeft="@drawable/ic_folder_shared_black_24dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="number" />


    <EditText
        android:id="@+id/editDataNasc"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCpf"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/data_de_nascimento"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_date_range_black_24dp"
        android:inputType="date" />

    <Button
        android:id="@+id/btnCadastrarUsuario"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Confirmar"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCadastrarUsuario"
        android:layout_alignBottom="@+id/btnCadastrarUsuario"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:text="Voltar"
        android:visibility="invisible" />


</LinearLayout>

