<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fatec.br.adocaopet.Activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:onClick="takeAPicture"
                app:srcCompat="@drawable/icone_atualizado" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="280dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/et_bg"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_bg"
                    android:drawableLeft="@drawable/ic_https_black_24dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/action_sign_in"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <Button
                android:id="@+id/regiter_button"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/register_button"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <Button
                android:id="@+id/esqueceu_senha_button"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="Esqueceu sua senha?"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>
